welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:-5: error: Unmatched closing brace '}' ignored here
	}
        ^RunFour:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^RunFour:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^